@@ -492,9 +492,10 @@
     <branch id="HEAD" stringfrozen="true"/>
   </module>
   <module id="glade3">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="glade3-3-0-branch" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="glib">
     <_description>GLib</_description>
