@@ -535,7 +535,7 @@
       <_description>Development Tools</_description>
       <module id="accerciser" branch="gnome-2-20"/>
       <module id="devhelp" branch="gnome-2-20"/>
-      <module id="glade3"/>
+      <module id="glade3" branch="gnome-2-20"/>
       <module id="gnome-devel-docs"/>
     </category>
   </release>
