@@ -1,3 +1,9 @@
+2007-12-18  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	glade3 branched for gnome-2-20
+
 2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* gnome-modules.xml.in:
